@@ -5,6 +5,7 @@ Added .sms file viewer
 
 Added setting to disable TZX pauses
 
+Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
 Fixed file previews on corrupted files: pzx, tap
 
 Version 9.2 - Cliff Hanger edition. 05 April 2021
